<resources>
    <string name="app_name">Practica 1</string>
    <string name="main_description">Servicios Móviles. Grado en Ingeniería Telemática</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_auth_user">Usuario</string>
    <string name="fragment_button_connect">Entrar</string>
    <string name="clave">Clave</string>
    <string name="login_hint_pass">Escriba su contraseña</string>
    <string name="login_hint_user">Escriba su nombre de usuario</string>
    <string name="login_IP">Dirección</string>
    <string name="login_hint_IP">Introduzca dirección IP</string>
    <string name="login_puerto">Puerto</string>
    <string name="login_hint_port">Puerto TCP servidor</string>
    <string name="mainactivity_fragmentpresent">Ya hay un fragmento</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_main_MC">María del Carmen Llobregat Jiménez</string>
    <string name="service_show">Mostrar</string>
    <string name="Share_Shelf">Share_Shelf</string>
</resources>
