<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_auth_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    tools:context=".FragmentAuth">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/fragment_auth_label_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/fragment_auth_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fragment_auth_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_auth_label_user"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/fragment_auth_label_user"
        android:ems="10"
        android:hint="@string/login_hint_user"
        android:inputType="text"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/fragment_auth_label_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="52dp"
        android:text="@string/clave"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fragment_auth_edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_auth_label_user"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:layout_toEndOf="@+id/fragment_auth_label_user"
        android:ems="10"
        android:hint="@string/login_hint_pass"
        android:inputType="textPassword"
        android:autofillHints="pass" />

    <TextView
        android:id="@+id/fragment_auth_label_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_IP"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fragment_auth_edit_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_auth_label_user"
        android:layout_marginStart="27dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/fragment_auth_label_user"
        android:ems="10"
        android:hint="@string/login_hint_IP"
        android:inputType="text"
        android:autofillHints="ip" />

    <TextView
        android:id="@+id/fragment_auth_label_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="155dp"
        android:text="@string/login_puerto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fragment_auth_edit_puerto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_auth_label_user"
        android:layout_marginStart="28dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@+id/fragment_auth_label_user"
        android:ems="10"
        android:hint="@string/login_hint_port"
        android:inputType="number"
        android:autofillHints="1" />

    <Button
        android:id="@+id/fragment_auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/main_padding"
        android:text="@string/fragment_button_connect" />

</RelativeLayout>